--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@prisma/client": "^6.8.2",
+    "lucide-react": "^0.518.0",
     "motion": "^12.18.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
